# bevp-protocol

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: SECURITY.md
crates/bevp-protocol/: Cargo.toml  README.md
scripts/: release.sh
